# final-project-level3-recsys-07

./: .gitignore  README.md  ReadMe.md  pyproject.toml  requirements.txt  server_run.sh
EDA/: EDA.ipynb  EDA_codimap.ipynb  EDA_codishop.ipynb  IIM_maker.ipynb  make_item_matrix_codimap.ipynb
crawler/: README.md  crawler_baseline.ipynb  crawler_hyunduk.ipynb  item_crawler.ipynb
crawler/codi_crawler/: crawl_coordi.ipynb
crawler/item_crawler/: item_crawler.py  utils.py
crawler/item_crawler_ver2/: item_crawler.py  (+1 more)
database/: wiyc-db.sql
models/: README.md
preprocessing/: IIM_maker.ipynb  README.md  buy_age_preprocess.py  class.ipynb  class_preprocess.py  cluster_item_interaction_matrix.ipynb  cluster_item_interaction_matrix.py  clustering_test.ipynb  color.json  color_class_preprocess.py  color_map.json  color_preprocess.py  likes_preprocess.py  preprocess.py  preprocess_wrong_colors.ipynb  preprocessing.py  preprocessing_airflow.ipynb  preprocessing_codi.py  preprocessing_codi_tag.py  preprocessing_item.py  preprocessing_item_buy_age.py  preprocessing_item_buy_gender.py  preprocessing_item_codi_id.py  preprocessing_item_fit.py  preprocessing_item_four_season.py  preprocessing_item_rel_codi_url.py  preprocessing_item_tag.py  preprocessing_somi.ipynb  preprocessing_temp.py  rating_preprocess.py  run.ipynb  tag.ipynb  utils_codi.py  utils_item.py  utils_item_fit.py  utils_item_four_season.py
server/: README.md  ReadMe.md  __main__.py  config.yaml  main.py
streamlit_frontend/: app.py  readme.md  requirements.txt  rule_based.py  streamlit_run.sh  utils.py
(+53 files in other folders)
